[package]
name = "disassembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.11.0"
object = "0.30.3"
sleigh = "*"
sleigh-sys = "0.1.0"

[dependencies.bin_check]
path = "../bin_check"
